--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ php:
 
 before_script:
   - composer self-update
-  - composer install --prefer-source --no-interaction --dev
+  - cp .env.example .env
+  - php artisan key:generate
 
 script: phpunit
 
@@ -17,3 +18,6 @@ matrix:
 notifications:
     on_success: never
     on_failure: always
+
+script:
+  - vendor/bin/phpunit
