--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ php:
 
 before_script:
   - composer self-update
+  - travis_retry composer install --prefer-source --no-interaction --dev
   - cp .env.example .env
   - php artisan key:generate
 
