--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,9 @@
         ],
         "post-install-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postInstall",
-            "php artisan optimize"
+            "php artisan clear-compiled",
+            "php artisan optimize",
+            "chmod -R 777 public/"
         ],
         "post-update-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
@@ -48,4 +50,5 @@
         "sort-packages": true,
         "optimize-autoloader": true
     }
+
 }
